--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "minimum-stability": "stable",
     "require": {
         "nikic/fast-route": "^1.2",
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "phpmailer/phpmailer": "~6.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "*"
